[package]
name = "little"
version = "0.2.7"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
documentation = "http://nercury.github.io/little-rs/little/index.html"
repository = "https://github.com/Nercury/little-rs"
license = "MIT"
description = "Little interpreter designed as fast template backend."
readme = "README.md"

[dependencies]
byteorder = "^0.3"
rust-crypto = "^0.2"

[features]
nightly = []
