[package]
name = "little"
version = "0.3.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
documentation = "http://nercury.github.io/little-rs/little/index.html"
repository = "https://github.com/Nercury/little-rs"
license = "MIT"
description = "Little interpreter designed as fast template backend."
readme = "README.md"

[dependencies]
byteorder = "^0.4"
log = "^0.3"

[dev-dependencies]
env_logger = "^0.3"

[features]
nightly = []
